# VirtualizationCode

./: README.md  dpdk19.11-study.docx
code/StarCloud/: settings.gradle
code/StarCloud/app/: build.gradle
code/dpdk-20.11/: dpdk-20.11.spec  meson_options.txt
code/dpdk-20.11/kernel/linux/igb_uio/: .Makefile.swp  meson.build
code/dpdk-22.11/: dpdk-22.11.spec  meson_options.txt
code/dpdk-22.11/kernel/linux/igb_uio/: meson.build
code/linux-3.10.0-1160.71.1.el7/: Makefile
code/openvswitch-2.13.4/: config.h.in  configure  package.m4
code/openvswitch-3.1.2/: Makefile.in  aclocal.m4  config.h.in  configure  nohup.out  package.m4
code/qemu-2.0.0/: aio-posix.d  async.d  block-migration.d  block.d  blockdev-nbd.d  blockdev.d  blockjob.d  bt-host.d  bt-vhci.d  config-host.h  config-host.mak  config.status  coroutine-ucontext.d  device-hotplug.d  dma-helpers.d  hmp.d  iohandler.d  iothread.d  main-loop.d  migration-exec.d  migration-fd.d  migration-tcp.d  migration-unix.d  migration.d  nbd.d  os-posix.d  page_cache.d  qapi-types.c  qapi-types.d  qapi-types.h  qapi-visit.c  qapi-visit.d  qapi-visit.h  qdev-monitor.d  qemu-2.0.0.spec  qemu-bridge-helper  qemu-bridge-helper.d  qemu-char.d  qemu-coroutine-io.d  qemu-coroutine-lock.d  (+26 more)
code/qemu-2.8.0/: qemu-2.8.0.spec
code/qemu-5.0.0/: qemu-5.0.0.spec
code/qemu-kvm-1.2.0/: EXTERNAL_DEPENDENCIES  KVM_VERSION  blockdev.c  configure  hmp-commands.hx  kvm-all.c  kvm.h  monitor.c  qemu-config.c  qemu-kvm-1.2.0.spec  qemu-options.hx  sysemu.h  vl.c
note/: ZERO.eddx  dpdk.eddx  dpdk19.11-study.docx
openvswitch-2.13.4/: Makefile.in
openvswitch-2.13.4/rhel/: openvswitch-dkms.spec  openvswitch-kmod-fedora.spec  openvswitch.spec
(+505 files in other folders)
